gdaygame add page

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-    "url": "https://ghibligame.vercel.app/",
+    "url": "https://gdaygame.vercel.app/",
     "name": "GHIB APP",
-    "iconUrl": "https://ghibligame.vercel.app/ghibli_game.png"
+    "iconUrl": "https://gdaygame.vercel.app/gday_intro_logo.png"
   }
 
   
